fix dashboard length to stop horizontal scrolling

--- a/app/assets/stylesheets/drive-subnav.css.scss
+++ b/app/assets/stylesheets/drive-subnav.css.scss
@@ -26,5 +26,6 @@ $main-accent-hover: #7eeb82;
 
 .pink-present {
   color: $main-accent;
+  font-size: 50px;
 }
 
