--- a/app/assets/stylesheets/drive.css.scss
+++ b/app/assets/stylesheets/drive.css.scss
@@ -16,7 +16,10 @@ $main-accent-hover: #7eeb82;
   display: inline-block;
   width: 200px;
   padding: 15px;
-  margin: 10px 10px 10px 10px;
+  margin-top: -20px;
+  margin-right: 10px;
+  margin-bottom: 40px;
+  margin-left: 10px;
   p {
     margin: 0;
   }
