--- a/app/assets/stylesheets/org-tools.css.scss
+++ b/app/assets/stylesheets/org-tools.css.scss
@@ -5,10 +5,11 @@ $cream-pixels: url("/assets/cream_pixels.png");
 .access {
   background-color: #eee;
   overflow: auto;
-  width: 1200px;
+  width: 1130px;
   margin-top: 50px;
-  padding: 40px;
-  padding-left: 130px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-left: 150px;
   bottom: 0;
 }
 
